--- a/index.html
+++ b/index.html
@@ -12,37 +12,9 @@
 </head>
 
 <body>
-  <nav id= "menu" class="position-relative overflow-hidden menuBarra">
-      <img id="background" src="img/4Y2EPFZNKFBB7BAY5TOOWJL3RU.jpg" alt="uuee" class="position-absolute">
-      <div class="clearfix bg-dark shadow rounded fixed-top">
-        <a id="logo" class="btn btn-dark float-left" href="index.html">TGIF</a>
-        <ul class="nav list-group-horizontal float-right">
-          <li value="0" class="event btn btn-dark">Home</li>
-          <li value="1" class="event btn btn-dark">About us</li>
-          <li value="2" class="event btn btn-dark">History</li>
-          <li>
-            <a href="#" class="btn btn-dark" data-toggle="dropdown">Congress 113</a>
-            <ul class="dropdown-menu">
-              <li class=" btn dropdown-item"><a class="btn" href="senate-starter-page.html">Senate</a></li>
-              <li class=" btn dropdown-item"><a class="btn" href="house-starter-page.html">House</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#" class="btn btn-dark" data-toggle="dropdown">Attendance</a>
-            <ul class="dropdown-menu">
-              <li class=" btn dropdown-item"><a class="btn" href="senate-attendance.html">Senate</a></li>
-              <li class=" btn dropdown-item"><a class="btn" href="house-attendance.html">House</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#" class="btn btn-dark" data-toggle="dropdown">Party Loyalty</a>
-            <ul class="dropdown-menu">
-              <li class=" btn dropdown-item"><a class="btn" href="senate-party-loyalty.html">Senate</a></li>
-              <li class=" btn dropdown-item"><a class="btn" href="house-party-loyalty.html">House</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+  <nav id="menu" class="position-relative overflow-hidden menuBarra">
+    <img id="background" src="img/4Y2EPFZNKFBB7BAY5TOOWJL3RU.jpg" alt="uuee" class="position-absolute">
+    <menuprincipal></menuprincipal>
   </nav>
   <!--Table container-->
   <div class="w-100">
@@ -125,7 +97,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/componentes.js"></script>
 </body>
 
 </html>
