--- a/senate-starter-page.html
+++ b/senate-starter-page.html
@@ -11,39 +11,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<nav>
-  <div class="position-relative overflow-hidden menuBarra">
+<body>
+<nav id="menu" class="position-relative overflow-hidden menuBarra">
     <img id="background" src="img/articulos_6165_1_180409_294565.jpg" alt="uuee" class="position-absolute">
-    <div class="clearfix bg-dark shadow rounded fixed-top">
-      <a id="logo" class="btn btn-dark float-left" href="index.html">TGIF</a>
-      <ul class="nav list-group-horizontal float-right">
-        <li><a class="btn btn-dark" href="index.html">Home</a></li>
-        <li>
-          <a href="#" class="btn btn-dark" data-toggle="dropdown">Congress 113</a>
-          <ul class="dropdown-menu">
-            <li class=" btn dropdown-item"><a class="btn" href="senate-starter-page.html">Senate</a>
-            </li>
-            <li class=" btn dropdown-item"><a class="btn" href="house-starter-page.html">House</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#" class="btn btn-dark" data-toggle="dropdown">Attendance</a>
-          <ul class="dropdown-menu">
-            <li class=" btn dropdown-item"><a class="btn" href="senate-attendance.html">Senate</a>
-            </li>
-            <li class=" btn dropdown-item"><a class="btn" href="house-attendance.html">House</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#" class="btn btn-dark" data-toggle="dropdown">Party Loyalty</a>
-          <ul class="dropdown-menu">
-            <li class=" btn dropdown-item"><a class="btn" href="senate-party-loyalty.html">Senate</a></li>
-            <li class=" btn dropdown-item"><a class="btn" href="house-party-loyalty.html">House</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
+    <menuprincipal></menuprincipal>    
 </nav>
 
 <div class="m-2">
@@ -153,7 +124,7 @@
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/json.js"></script>
-<script src="js/main.js"></script>
+<script src="js/componentes.js"></script>
 </body>
 
 </html>
