--- a/house-starter-page.html
+++ b/house-starter-page.html
@@ -12,111 +12,31 @@
 </head>
 
 <body>
-  <nav id="menu" class="position-relative overflow-hidden menuBarra">
-    <img id="background" src="img/Nueva-York-Times-Square-FB-001.jpg" alt="uuee" class="position-absolute">
-    <menuprincipal></menuprincipal>
-  </nav>
-  <!--Table container-->
-  <div class="m-2">
-    <table class="p-3 w-50 float-left table table-dark">
-      <thead>
-        <tr>
-          <th scope="col">Members</th>
-          <th scope="col">full name</th>
-          <th scope="col">state</th>
-          <th scope="col">seniority</th>
-          <th scope="col">Party</th>
-          <th scope="col">Total votes</th>
-        </tr>
-      </thead>
-      <tbody id="tbody"></tbody>
-    </table>
-    <div class="w-50 p-3 float-right">
-      <h2>Congressmen</h2>
-      <p>The major power of the House is to pass federal legislation that affects the entire country, although its
-        bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law
-        (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber).
-        The
-        House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached
-        officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no
-        majority in the Electoral College.</p>
-      <p>Each U.S. state is represented in the House in proportion to its population as measured in the census,
-        but
-        every state is entitled to at least one representative. </p>
-      <div class="input-group mb-3">
-        <h2 class="d-block w-100">Parties</h2>
-        <label for="party"></label>
-        <div class="input-group-text">
-          <input type="checkbox" name="party" value="D" id="democrat" aria-label="Checkbox for following text input">
-          <h6 class="m-auto">Democrat</h6>
-        </div>
-        <div class="input-group-text">
-          <input type="checkbox" name="party" value="R" id="republican" aria-label="Checkbox for following text input">
-          <h6 class="m-auto">Republican</h6>
-        </div>
-        <div class="input-group-text">
-          <input type="checkbox" name="party" value="I" id="independet" aria-label="Checkbox for following text input">
-          <h6 class="m-auto">Independet</h6>
+  <div id="app">
+    <nav class="position-relative overflow-hidden" :style="{height : high+'px'}">
+      <img id="background" src="img/Nueva-York-Times-Square-FB-001.jpg" alt="uuee" class="position-absolute">
+      <menuprincipal></menuprincipal>
+    </nav>
+    <div class="m-2">
+      <tableresult></tableresult>
+      <div class="w-50 p-3 float-right">
+        <h2>Congressmen</h2>
+        <p>The major power of the House is to pass federal legislation that affects the entire country, although its
+          bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law
+          (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber).
+          The
+          House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached
+          officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no
+          majority in the Electoral College.</p>
+        <p>Each U.S. state is represented in the House in proportion to its population as measured in the census,
+          but
+          every state is entitled to at least one representative. </p>
+        <filterparties></filterparties>
+        <div>
+          <h2>States</h2>
+          <filterstates></filterstates>
         </div>
       </div>
-    </div>
-    <div>
-      <h2>States</h2>
-      <form action="" method="" id="filterStates">
-        <select class="custom-select">
-          <option value="">Choose State</option>
-          <option value="AL">Alabama</option>
-          <option value="AK">Alaska</option>
-          <option value="AZ">Arizona</option>
-          <option value="AR">Arkansas</option>
-          <option value="CA">California</option>
-          <option value="CO">Colorado</option>
-          <option value="CT">Connecticut</option>
-          <option value="DE">Delaware</option>
-          <option value="FL">Florida</option>
-          <option value="GA">Georgia</option>
-          <option value="HI">Hawaii</option>
-          <option value="ID">Idaho</option>
-          <option value="IL">Illinois</option>
-          <option value="IN">Indiana</option>
-          <option value="IA">Iowa</option>
-          <option value="KS">Kansas</option>
-          <option value="KY">Kentucky</option>
-          <option value="LA">Louisiana</option>
-          <option value="ME">Maine</option>
-          <option value="MD">Maryland</option>
-          <option value="MA">Massachusetts</option>
-          <option value="MI">Michigan</option>
-          <option value="MN">Minnesota</option>
-          <option value="MS">Mississippi</option>
-          <option value="MO">Missouri</option>
-          <option value="MT">Montana</option>
-          <option value="NE">Nebraska</option>
-          <option value="NV">Nevada</option>
-          <option value="NH">New Hampshire</option>
-          <option value="NJ">New Jersey</option>
-          <option value="NM">New Mexico</option>
-          <option value="NY">New York</option>
-          <option value="NC">North Carolina</option>
-          <option value="ND">North Dakota</option>
-          <option value="OH">Ohio</option>
-          <option value="OK">Oklahoma</option>
-          <option value="OR">Oregon</option>
-          <option value="PA">Pennsylvania</option>
-          <option value="RI">Rhode Island</option>
-          <option value="SC">South Carolina</option>
-          <option value="SD">South Dakota</option>
-          <option value="TN">Tennessee</option>
-          <option value="TX">Texas</option>
-          <option value="UT">Utah</option>
-          <option value="VT">Vermont</option>
-          <option value="VA">Virginia</option>
-          <option value="WA">Washington</option>
-          <option value="WV">West Virginia</option>
-          <option value="WI">Wisconsin</option>
-          <option value="WY">Wyoming</option>
-        </select>
-      </form>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
