--- a/senate-starter-page.html
+++ b/senate-starter-page.html
@@ -12,119 +12,43 @@
 </head>
 
 <body>
-<nav id="menu" class="position-relative overflow-hidden menuBarra">
-    <img id="background" src="img/articulos_6165_1_180409_294565.jpg" alt="uuee" class="position-absolute">
-    <menuprincipal></menuprincipal>    
-</nav>
+  <div id="app">
+    <nav class="position-relative overflow-hidden" :style="{height : high+'px'}">
+      <img id="background" src="img/articulos_6165_1_180409_294565.jpg" alt="uuee" class="position-absolute">
+      <menuprincipal></menuprincipal>
+    </nav>
 
-<div class="m-2">
-  <table class="p-3 w-50 float-left table table-dark">
-    <thead>
-      <tr>
-        <th scope="col">Members</th>
-        <th scope="col">full name</th>
-        <th scope="col">state</th>
-        <th scope="col">seniority</th>
-        <th scope="col">Party</th>
-        <th scope="col">Total votes</th>
-      </tr>
-    </thead>
-    <tbody id="tbody"></tbody>
-  </table>
-  <div class="w-50 p-3 float-right">
-    <h2>Senators</h2>
-    <p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S.
-      Constitution. Each state is represented by two senators, regardless of population, who serve staggered
-      six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to
-      treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet
-      secretaries, federal judges, other federal executive officials, military officers, regulatory officials,
-      ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the
-      House.</p>
-    <div class="input-group mb-3">
-      <h2 class="d-block w-100">Parties</h2>
-      <label for="party"></label>
-      <div class="input-group-text">
-        <input type="checkbox" name="party" value="D" id="democrat" aria-label="Checkbox for following text input">
-        <h6 class="m-auto">Democrat</h6>
+    <div class="m-2">
+      <tableresult></tableresult>
+      <div class="w-50 p-3 float-right">
+        <h2>Senators</h2>
+        <p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S.
+          Constitution. Each state is represented by two senators, regardless of population, who serve staggered
+          six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to
+          treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet
+          secretaries, federal judges, other federal executive officials, military officers, regulatory officials,
+          ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the
+          House.</p>
+        <filterparties></filterparties>
+        <div>
+          <h2>States</h2>
+          <filterstates></filterstates>
+        </div>
       </div>
-      <div class="input-group-text">
-        <input type="checkbox" name="party" value="R" id="republican" aria-label="Checkbox for following text input">
-        <h6 class="m-auto">Republican</h6>
-      </div>
-      <div class="input-group-text">
-        <input type="checkbox" name="party" value="I" id="independet" aria-label="Checkbox for following text input">
-        <h6 class="m-auto">Independet</h6>
-      </div>
-    </div>
-    <div>
-      <h2>States</h2>
-      <form action="" method="" id="filterStates">
-        <select class="custom-select">
-          <option value="">Choose State</option>
-          <option value="AL">Alabama</option>
-          <option value="AK">Alaska</option>
-          <option value="AZ">Arizona</option>
-          <option value="AR">Arkansas</option>
-          <option value="CA">California</option>
-          <option value="CO">Colorado</option>
-          <option value="CT">Connecticut</option>
-          <option value="DE">Delaware</option>
-          <option value="FL">Florida</option>
-          <option value="GA">Georgia</option>
-          <option value="HI">Hawaii</option>
-          <option value="ID">Idaho</option>
-          <option value="IL">Illinois</option>
-          <option value="IN">Indiana</option>
-          <option value="IA">Iowa</option>
-          <option value="KS">Kansas</option>
-          <option value="KY">Kentucky</option>
-          <option value="LA">Louisiana</option>
-          <option value="ME">Maine</option>
-          <option value="MD">Maryland</option>
-          <option value="MA">Massachusetts</option>
-          <option value="MI">Michigan</option>
-          <option value="MN">Minnesota</option>
-          <option value="MS">Mississippi</option>
-          <option value="MO">Missouri</option>
-          <option value="MT">Montana</option>
-          <option value="NE">Nebraska</option>
-          <option value="NV">Nevada</option>
-          <option value="NH">New Hampshire</option>
-          <option value="NJ">New Jersey</option>
-          <option value="NM">New Mexico</option>
-          <option value="NY">New York</option>
-          <option value="NC">North Carolina</option>
-          <option value="ND">North Dakota</option>
-          <option value="OH">Ohio</option>
-          <option value="OK">Oklahoma</option>
-          <option value="OR">Oregon</option>
-          <option value="PA">Pennsylvania</option>
-          <option value="RI">Rhode Island</option>
-          <option value="SC">South Carolina</option>
-          <option value="SD">South Dakota</option>
-          <option value="TN">Tennessee</option>
-          <option value="TX">Texas</option>
-          <option value="UT">Utah</option>
-          <option value="VT">Vermont</option>
-          <option value="VA">Virginia</option>
-          <option value="WA">Washington</option>
-          <option value="WV">West Virginia</option>
-          <option value="WI">Wisconsin</option>
-          <option value="WY">Wyoming</option>
-        </select>
-      </form>
     </div>
   </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="js/json.js"></script>
-<script src="js/componentes.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="js/json.js"></script>
+  <script src="js/componentes.js"></script>
 </body>
 
 </html>
