tablas arregladas de la tarea 2 sin funcionar el filtro

--- a/senate-starter-page.html
+++ b/senate-starter-page.html
@@ -19,7 +19,7 @@
     </nav>
 
     <div class="m-2">
-      <tableresult></tableresult>
+      <tableresult :members= "members"></tableresult>
       <div class="w-50 p-3 float-right">
         <h2>Senators</h2>
         <p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S.
