--- a/senate-starter-page.html
+++ b/senate-starter-page.html
@@ -10,17 +10,14 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
   <div id="app">
     <nav class="position-relative overflow-hidden" :style="{height : high+'px'}">
       <img id="background" src="img/articulos_6165_1_180409_294565.jpg" alt="uuee" class="position-absolute">
       <menuprincipal></menuprincipal>
     </nav>
-
     <div class="m-2">
-      <tableresult :members= "members"></tableresult>
-      <div class="w-50 p-3 float-right">
+      <div class="w-100 p-3 float-right">
         <h2>Senators</h2>
         <p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S.
           Constitution. Each state is represented by two senators, regardless of population, who serve staggered
@@ -29,11 +26,7 @@
           secretaries, federal judges, other federal executive officials, military officers, regulatory officials,
           ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the
           House.</p>
-        <filterparties></filterparties>
-        <div>
-          <h2>States</h2>
-          <filterstates></filterstates>
-        </div>
+        <filtertable :members="members"></filtertable>
       </div>
     </div>
   </div>
