--- a/house-attendance.html
+++ b/house-attendance.html
@@ -12,110 +12,33 @@
 </head>
 
 <body>
-  <nav class="position-relative overflow-hidden menuBarra">
+  <div id = "app">
+    <nav class="position-relative overflow-hidden" :style="{height : high+'px'}">
       <img id="background" src="img/Tasa-de-desempleo-en-Estados-Unidos.jpg" alt="uuee" class="position-absolute">
-      <div class="clearfix bg-dark shadow rounded fixed-top">
-        <a id="logo" class="btn btn-dark float-left" href="index.html">TGIF</a>
-        <ul class="nav list-group-horizontal float-right">
-          <li><a class="btn btn-dark" href="index.html">Home</a></li>
-          <li>
-            <a href="#" class="btn btn-dark" data-toggle="dropdown">Congress 113</a>
-            <ul class="dropdown-menu">
-              <li class=" btn dropdown-item"><a class="btn" href="senate-starter-page.html">Senate</a>
-              </li>
-              <li class=" btn dropdown-item"><a class="btn" href="house-starter-page.html">House</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#" class="btn btn-dark" data-toggle="dropdown">Attendance</a>
-            <ul class="dropdown-menu">
-              <li class=" btn dropdown-item"><a class="btn" href="senate-attendance.html">Senate</a>
-              </li>
-              <li class=" btn dropdown-item"><a class="btn" href="house-attendance.html">House</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#" class="btn btn-dark" data-toggle="dropdown">Party Loyalty</a>
-            <ul class="dropdown-menu">
-              <li class=" btn dropdown-item"><a class="btn" href="senate-party-loyalty.html">Senate</a></li>
-              <li class=" btn dropdown-item"><a class="btn" href="house-party-loyalty.html">House</a></li>
-            </ul>
-          </li>
-        </ul>
+      <menuprincipal></menuprincipal>
+    </nav>
+    <div class="m-4">
+      <div class="w-50 float-left">
+        <h2>Attendance</h2>
+        <p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house.
+          Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in
+          most
+          cases, debates continue even if a majority is not present.</p>
+
+        <p>The House uses roll-call votes; a clerk calls out the names of all the senators, each senator stating
+          "aye"
+          or "no" when his or her name is announced. The House reserves roll-call votes for the most formal
+          matters,
+          as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic
+          device. In the case of a tie, the motion in question fails. In the House, the Vice President may (if
+          present) cast the tiebreaking vote.</p>
       </div>
-  </nav>
+        <h2>House at a glance</h2>
+        <glance :members= "members"></glance>
 
-  <!--Table container-->
-  <div class="m-4">
-    <div class="w-50 float-left">
-      <h2>Attendance</h2>
-      <p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house.
-        Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in
-        most
-        cases, debates continue even if a majority is not present.</p>
-
-      <p>The House uses roll-call votes; a clerk calls out the names of all the senators, each senator stating
-        "aye"
-        or "no" when his or her name is announced. The House reserves roll-call votes for the most formal
-        matters,
-        as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic
-        device. In the case of a tie, the motion in question fails. In the House, the Vice President may (if
-        present) cast the tiebreaking vote.</p>
+        <topbottom :fieldOrder="missed_votes_pct" :members="members" :title="'Most Engaged'"></topbottom>
+        <topbottom :fieldOrder="missed_votes_pct" :members="members" :title="'Least Engaged'"></topbottom>
     </div>
-
-    <div class="w-100">
-      <h2>House at a glance</h2>
-      <table class="p-3 w-50 table table-dark">
-        <thead>
-          <tr>
-            <th>Party</th>
-            <th>Number of Reps</th>
-            <th>% Voted with Prty</th>
-          </tr>
-        </thead>
-        <tbody id="firstTable">
-          <tr value="R">
-            <td>Republican</td>
-          </tr>
-          <tr value="D">
-            <td>Democrat</td>
-          </tr>
-          <tr value="I">
-            <td>Independent</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="w-50 float-left">
-      <h2>Least Engaged (Bottom 10% Attendance)</h2>
-      <table class="p-3 w-100 table table-dark">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Number of Missed Votes</th>
-            <th>% Missed</th>
-          </tr>
-        </thead>
-        <tbody id="bottomAttendance">
-        </tbody>
-      </table>
-    </div>
-
-    <div class="w-50 float-left">
-      <h2>Most Engaged (Top 10% Attendance)</h2>
-      <table class="p-3 w-100 table table-dark">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Number of Missed Votes</th>
-            <th>% Missed</th>
-          </tr>
-        </thead>
-        <tbody id="topAttendance">
-        </tbody>
-      </table>
-    </div>
-
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -128,7 +51,8 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="js/json.js"></script>
-  <script src="js/attandance.js"></script>
+  <script src="js/componentes2.js"></script>
+  <script src="js/componentes.js"></script>
 </body>
 
 </html>
